k8s/ingress/ssok-app/base/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-app-ingress
  namespace: ssok
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ssok-group
    alb.ingress.kubernetes.io/subnets: subnet-0477299d6297b7a52,subnet-05bce5c34c2186ef4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:635091448057:certificate/eae8096f-587b-4bd8-9427-48735783d857
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"


spec:
  rules:
    - host: api.ssok.kr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ssok-gateway-service
                port:
                  number: 80
          - path: /chaos
            pathType: Prefix
            backend:
              service:
                name: ssok-gateway-service
                port:
                  number: 80
